--- a/cubatao.html
+++ b/cubatao.html
@@ -3,38 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="imagens/cubatao/cubatao.png" type="image/x-icon">
     <title>Cubatão</title>
+    <link rel="stylesheet" href="cubatao.css">
 </head>
 <body>
     <div>
-        <a href="index.html">voltar</a>
+        <div class="margem">
+            <a class="anterior" href="santos.html">cidade anterior</a>
+            <a class="voltar" href="index.html">voltar</a>
+            <a class="proximo" href="saovicente.html">próxima cidade</a>
+        </div>
 
-        <h1>Cubatão</h1>
-        <p>Cubatão é uma cidade localizada no estado de São Paulo, Brasil, e é conhecida por seu perfil industrial marcante. Sua economia é impulsionada por refinarias de petróleo, indústrias químicas e siderúrgicas, destacando-se como um centro industrial na Região Metropolitana da Baixada Santista.</p>
+        <div class="text-container">
+            <h1>Cubatão</h1>
+            <p>Cubatão é uma cidade localizada no estado de São Paulo, Brasil, e é conhecida por seu perfil industrial marcante. Sua economia é impulsionada por refinarias de petróleo, indústrias químicas e siderúrgicas, destacando-se como um centro industrial na Região Metropolitana da Baixada Santista.</p>
+        </div>
 
         <h2>Pontos turisticos de Cubatão</h2>
 
-        <div>
-            <h3>Caminhada Estrada Velha de Santos</h3>
-            <p>A Trilha Caminhada Estrada Velha de Santos se estende por 9 km, proporcionando uma experiência panorâmica ao descer em direção à cidade de Santos. Inicialmente reaberta em 2002, a trilha foi destinada à prática de atividades ecoturísticas, permitindo aos visitantes explorar a rica biodiversidade da Mata Atlântica. Ao longo do percurso, os caminhantes são agraciados com vistas espetaculares, não apenas da exuberante vegetação, mas também de monumentos históricos construídos em 1922 para celebrar o centenário da independência do Brasil.</p>
-            <p>A jornada, que pode ser concluída em aproximadamente 4 a 5 horas, é classificada como de dificuldade fácil, tornando-a acessível a diversos públicos. Durante o trajeto, os aventureiros têm a oportunidade não apenas de apreciar a natureza envolvente, mas também de mergulhar na história por meio dos monumentos que contam parte da trajetória do país. É aconselhável estar preparado com calçados confortáveis, água e protetor solar, pois a trilha proporciona uma experiência enriquecedora, combinando natureza e patrimônio histórico em um único percurso.</p>
+        <div class="conf">
+            <img class="esq" src="imagens/cubatao/passeio.jpg" alt="imagem da Caminhada Estrada Velha de Santos">
+            <div class="conftexto">
+                <h3>Caminhada Estrada Velha de Santos</h3>
+                <p>A Trilha Caminhada Estrada Velha de Santos se estende por 9 km, proporcionando uma experiência panorâmica ao descer em direção à cidade de Santos. Inicialmente reaberta em 2002, a trilha foi destinada à prática de atividades ecoturísticas, permitindo aos visitantes explorar a rica biodiversidade da Mata Atlântica. Ao longo do percurso, os caminhantes são agraciados com vistas espetaculares, não apenas da exuberante vegetação, mas também de monumentos históricos construídos em 1922 para celebrar o centenário da independência do Brasil.</p>
+                <p>A jornada, que pode ser concluída em aproximadamente 4 a 5 horas, é classificada como de dificuldade fácil, tornando-a acessível a diversos públicos. Durante o trajeto, os aventureiros têm a oportunidade não apenas de apreciar a natureza envolvente, mas também de mergulhar na história por meio dos monumentos que contam parte da trajetória do país. É aconselhável estar preparado com calçados confortáveis, água e protetor solar, pois a trilha proporciona uma experiência enriquecedora, combinando natureza e patrimônio histórico em um único percurso.</p>
+            </div>
         </div>
 
-        <div>
-            <h3>Perequê Park</h3>
-            <p>O Perequê Park é um encantador parque natural que oferece uma escapada refrescante para os amantes da natureza. Criado em 1990, o parque é um verdadeiro oásis, abraçado pela exuberante vegetação da Mata Atlântica, proporcionando aos visitantes uma experiência imersiva na beleza natural do local. Suas instalações incluem piscinas naturais e cachoeiras, proporcionando o ambiente ideal para um dia de lazer e diversão em meio à tranquilidade da natureza.</p>
-            <p>Durante o verão, o Perequê Park se torna um destino especialmente popular, atraindo aproximadamente 5 mil visitantes por mês. Esse influxo de visitantes destaca a popularidade do parque como um local preferido para escapar do calor e desfrutar de momentos agradáveis em um ambiente natural. Com opções para todos os gostos, desde áreas de lazer até experiências mais contemplativas, o Perequê Park é um destino versátil que combina entretenimento e preservação ambiental. Uma visita a este parque promete não apenas diversão, mas também uma conexão genuína com a riqueza natural da região.</p>
+        <div class="conf">
+            <div class="conftexto">
+                <h3>Perequê Park</h3>
+                <p>O Perequê Park é um encantador parque natural que oferece uma escapada refrescante para os amantes da natureza. Criado em 1990, o parque é um verdadeiro oásis, abraçado pela exuberante vegetação da Mata Atlântica, proporcionando aos visitantes uma experiência imersiva na beleza natural do local. Suas instalações incluem piscinas naturais e cachoeiras, proporcionando o ambiente ideal para um dia de lazer e diversão em meio à tranquilidade da natureza.</p>
+                <p>Durante o verão, o Perequê Park se torna um destino especialmente popular, atraindo aproximadamente 5 mil visitantes por mês. Esse influxo de visitantes destaca a popularidade do parque como um local preferido para escapar do calor e desfrutar de momentos agradáveis em um ambiente natural. Com opções para todos os gostos, desde áreas de lazer até experiências mais contemplativas, o Perequê Park é um destino versátil que combina entretenimento e preservação ambiental. Uma visita a este parque promete não apenas diversão, mas também uma conexão genuína com a riqueza natural da região.</p>
+            </div>
+            <img class="dir" src="imagens/cubatao/parque.jpg" alt="imagem do Perequê Park">
         </div>
 
-        <div>
-            <h3>Lago do Sapo</h3>
-            <p>O Largo Do Sapo, um destacado centro turístico em Cubatão, Brasil, assume uma posição de relevância histórica ao ser tombado como patrimônio histórico cubatense desde 2010. Localizado na Praça Joaquim Montenegro, o largo ganhou seu nome no início do século 20 devido à notável presença de sapos na área. A importância deste espaço remonta ao século 17, durante a instalação do antigo Porto Geral, que desempenhou um papel vital na vida colonial do país ao facilitar o significativo fluxo de pessoas e mercadorias entre Santos e São Paulo.</p>
-            <p>o explorar o Largo Do Sapo, os visitantes são imersos na rica história da região, especialmente através do casario preservado que testemunhou os eventos significativos do passado. O tombamento do local não apenas salvaguarda esses vestígios históricos, mas também destaca a relevância cultural do largo na formação da identidade de Cubatão. Uma visita a este centro turístico não só proporciona uma experiência enriquecedora, mas também é uma oportunidade para se conectar com as raízes profundas que moldaram a região ao longo dos séculos.</p>
+        <div class="conf">
+            <img class="esq" src="imagens/cubatao/largo.jpg" alt="imagem do largo do pato">
+            <div class="conftexto">
+                <h3>Largo do Sapo</h3>
+                <p>O Largo Do Sapo, um destacado centro turístico em Cubatão, Brasil, assume uma posição de relevância histórica ao ser tombado como patrimônio histórico cubatense desde 2010. Localizado na Praça Joaquim Montenegro, o largo ganhou seu nome no início do século 20 devido à notável presença de sapos na área. A importância deste espaço remonta ao século 17, durante a instalação do antigo Porto Geral, que desempenhou um papel vital na vida colonial do país ao facilitar o significativo fluxo de pessoas e mercadorias entre Santos e São Paulo.</p>
+                <p>o explorar o Largo Do Sapo, os visitantes são imersos na rica história da região, especialmente através do casario preservado que testemunhou os eventos significativos do passado. O tombamento do local não apenas salvaguarda esses vestígios históricos, mas também destaca a relevância cultural do largo na formação da identidade de Cubatão. Uma visita a este centro turístico não só proporciona uma experiência enriquecedora, mas também é uma oportunidade para se conectar com as raízes profundas que moldaram a região ao longo dos séculos.</p>
+            </div>
         </div>
 
-        <div>
-            <h3>Parque Anilinas</h3>
-            <p>O Parque Anilinas, no centro de Cubatão, Brasil, evoluiu ao longo do tempo e é agora conhecido como Novo Anilinas após uma reforma que trouxe cinemas e espaços culturais. Rodeado pela beleza da Mata Atlântica, o parque foi recentemente aprimorado com novos brinquedos e instalações esportivas, tornando-o ideal para piqueniques e diversão com as crianças. Este espaço urbano tradicional oferece uma atmosfera relaxante, sendo um refúgio perfeito para aproveitar um dia ensolarado na cidade.</p>
+        <div class="conf">
+            <div class="conftexto">
+                <h3>Parque Anilinas</h3>
+                <p>O Parque Anilinas, no centro de Cubatão, Brasil, evoluiu ao longo do tempo e é agora conhecido como Novo Anilinas após uma reforma que trouxe cinemas e espaços culturais. Rodeado pela beleza da Mata Atlântica, o parque foi recentemente aprimorado com novos brinquedos e instalações esportivas, tornando-o ideal para piqueniques e diversão com as crianças. Este espaço urbano tradicional oferece uma atmosfera relaxante, sendo um refúgio perfeito para aproveitar um dia ensolarado na cidade.</p>
+            </div>
+            <img class="dir" src="imagens/cubatao/anilinas.jpg" alt="imagem do Parque Anilinas">
         </div>
 
     </div>
