--- a/santos.html
+++ b/santos.html
@@ -3,39 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="imagens/santos/santos.png" type="image/x-icon">
     <title>Santos</title>
+    <link rel="stylesheet" href="santos.css">
 </head>
 <body>
     <div>
-        <a href="index.html">voltar</a>
+        <div class="margem">
+            <a class="anterior" href="guaruja.html">cidade anterior</a>
+            <a class="voltar" href="index.html">página inicial</a>
+            <a class="proximo" href="cubatao.html">próxima cidade</a>
 
-        <h1>Santos</h1>
-        <p>
-            Santos, situada no litoral do estado de São Paulo, destaca-se por sua rica história, influência portuária e encantadora atmosfera à beira-mar. As icônicas praias, como a Praia do Gonzaga, Praia do Boqueirão e Praia da Aparecida, atraem residentes e turistas para desfrutar de momentos de lazer e participar de eventos culturais.</p>
+        </div>
+
+        <div class="text-container">
+            <h1>Santos</h1>
+            <p>Santos, situada no litoral do estado de São Paulo, destaca-se por sua rica história, influência portuária e encantadora atmosfera à beira-mar. As icônicas praias, como a Praia do Gonzaga, Praia do Boqueirão e Praia da Aparecida, atraem residentes e turistas para desfrutar de momentos de lazer e participar de eventos culturais.</p>
+        </div>
 
             <h2>Pontos turisticos de Santos</h2>
 
-            <div>
-                <h3>Aquário Municipal de Santos</h3>
-                <p>O Aquário Municipal de Santos, situado na Ponta da Praia em Santos, é um aquário público que não apenas encanta os visitantes com sua localização à beira-mar, mas também oferece uma experiência única de observação da vida marinha. O aquário abriga uma vasta diversidade de espécies marinhas e de água doce, proporcionando aos visitantes a oportunidade de admirar tubarões, pinguins, estrelas-do-mar, ouriços, caranguejos-eremitas, anêmonas e outros moluscos. Além disso, o aquário se destaca por integrar museus dedicados à história natural e à pesca, enriquecendo ainda mais a experiência dos visitantes ao proporcionar informações detalhadas sobre o ecossistema marinho e a importância da pesca na região.</p>
+            <div class="conf">
+                <img class="esq" src="imagens/santos/aquario.webp" alt="imagem do Aquário Municipal de Santos">
+
+                <div class="conftexto">
+                    <h3>Aquário Municipal de Santos</h3>
+                    <p>O Aquário Municipal de Santos, situado na Ponta da Praia em Santos, é um aquário público que não apenas encanta os visitantes com sua localização à beira-mar, mas também oferece uma experiência única de observação da vida marinha. O aquário abriga uma vasta diversidade de espécies marinhas e de água doce, proporcionando aos visitantes a oportunidade de admirar tubarões, pinguins, estrelas-do-mar, ouriços, caranguejos-eremitas, anêmonas e outros moluscos. Além disso, o aquário se destaca por integrar museus dedicados à história natural e à pesca, enriquecendo ainda mais a experiência dos visitantes ao proporcionar informações detalhadas sobre o ecossistema marinho e a importância da pesca na região.</p>
+                </div>
             </div>
 
-            <div>
-                <h3>Passeio de Escuna Ponte Edgard Perdigão</h3>
-                <p>
-                    O Passeio de Escuna Ponte Edgard Perdigão é uma atração turística náutica que oferece uma visão panorâmica espetacular da costa de Santos. Operado pela empresa Escuna Mestre dos Mares, o passeio tem cerca de 1h30 de duração e parte da Ponte Edgard Perdigão, na Ponta da Praia. Ao longo do trajeto, que inclui pontos turísticos entre Santos e Guarujá, como a Fortaleza da Barra, a Praia do Góes, a Praia do Cheira Limão, a Praia do Sangava, a Ilha das Palmas e a orla da baía de Santos, a tripulação, vestida de piratas, compartilha histórias fascinantes sobre a região.</p>
+            <div class="conf">
+                <div class="conftexto">
+                    <h3>Passeio de Escuna Ponte Edgard Perdigão</h3>
+                    <p>O Passeio de Escuna Ponte Edgard Perdigão é uma atração turística náutica que oferece uma visão panorâmica espetacular da costa de Santos. Operado pela empresa Escuna Mestre dos Mares, o passeio tem cerca de 1h30 de duração e parte da Ponte Edgard Perdigão, na Ponta da Praia. Ao longo do trajeto, que inclui pontos turísticos entre Santos e Guarujá, como a Fortaleza da Barra, a Praia do Góes, a Praia do Cheira Limão, a Praia do Sangava, a Ilha das Palmas e a orla da baía de Santos, a tripulação, vestida de piratas, compartilha histórias fascinantes sobre a região.</p>
                     <p>Durante a viagem, os passageiros não apenas desfrutam da narrativa envolvente, mas também têm a oportunidade de saborear salgadinhos, refrigerantes, batidas, caipirinhas e água. O passeio está disponível diariamente durante a alta temporada (dezembro até o carnaval) e, após esse período, ocorre aos finais de semana e feriados.</p>
+                </div>
+
+                <img class="dir" src="imagens/santos/passeio.jpg" alt="imagem do Passeio de Escuna Ponte Edgard Perdigão">
             </div>
 
-            <div>
-                <h3>Pantheon dos Andradas</h3>
-                <p>O Pantheon dos Andradas é um monumento histórico situado na Praça Barão do Rio Branco. Este mausoléu foi concebido para abrigar os restos mortais de José Bonifácio de Andrada e Silva, conhecido como o Patriarca da Independência, além de seus irmãos Antônio Carlos Ribeiro de Andrada Machado e Silva, Patrício Manuel, e Martim Francisco Ribeiro de Andrada. Inaugurado em 7 de setembro de 1923, o Pantheon dos Andradas ocupa o local que anteriormente abrigava a portaria do Convento do Carmo. O monumento compreende uma capela, uma igreja e um museu de arte sacra, sendo projetado pelo escultor Rodolfo Bernardelli, com as peças esculpidas na Itália. Adicionalmente, o Pantheon ostenta oito painéis de bronze em baixo-relevo que narram cenas significativas da história do Brasil.</p>
+            <div class="conf">
+                <img class="esq" src="imagens/santos/andradas.jpg" alt="imagem do Pantheon dos Andradas">
+
+                <div class="conftexto">
+                    <h3>Pantheon dos Andradas</h3>
+                    <p>O Pantheon dos Andradas é um monumento histórico situado na Praça Barão do Rio Branco. Este mausoléu foi concebido para abrigar os restos mortais de José Bonifácio de Andrada e Silva, conhecido como o Patriarca da Independência, além de seus irmãos Antônio Carlos Ribeiro de Andrada Machado e Silva, Patrício Manuel, e Martim Francisco Ribeiro de Andrada. Inaugurado em 7 de setembro de 1923, o Pantheon dos Andradas ocupa o local que anteriormente abrigava a portaria do Convento do Carmo. O monumento compreende uma capela, uma igreja e um museu de arte sacra, sendo projetado pelo escultor Rodolfo Bernardelli, com as peças esculpidas na Itália. Adicionalmente, o Pantheon ostenta oito painéis de bronze em baixo-relevo que narram cenas significativas da história do Brasil.</p>
+                </div>
             </div>
 
-            <div>
-                <h3>Escultura Tomie Ohtake</h3>
-                <p>
-                    A Escultura Tomie Ohtake, situada na Praia do José Menino, constitui uma obra pública que presta homenagem à renomada artista plástica Tomie Ohtake. A escultura assume a forma de uma fita imponente de aço, pintada de vermelho, com impressionantes 15 metros de altura e 28 metros de comprimento. Sua inauguração, ocorrida em 2008, celebrou o centenário da imigração japonesa no Brasil. Destacando-se como um dos pontos turísticos mais emblemáticos de Santos, a escultura atrai visitantes tanto locais quanto turistas.</p>
+            <div class="conf">
+                <div class="conftexto">
+                    <h3>Escultura Tomie Ohtake</h3>
+                    <p>A Escultura Tomie Ohtake, situada na Praia do José Menino, constitui uma obra pública que presta homenagem à renomada artista plástica Tomie Ohtake. A escultura assume a forma de uma fita imponente de aço, pintada de vermelho, com impressionantes 15 metros de altura e 28 metros de comprimento. Sua inauguração, ocorrida em 2008, celebrou o centenário da imigração japonesa no Brasil. Destacando-se como um dos pontos turísticos mais emblemáticos de Santos, a escultura atrai visitantes tanto locais quanto turistas.</p>
+                </div>
+                <img class="dir" src="imagens/santos/escultura.jpg" alt="imagem da Escultura Tomie Ohtake">
             </div>
 
     </div>
